Het is nu mogelijk gebruikers te verwijderen, boekenlijsten van ze te bekijken en hun boeken te retourneren

--- a/KillerApp SE/KillerApp SE.csproj
+++ b/KillerApp SE/KillerApp SE.csproj
@@ -179,6 +179,7 @@
     <Content Include="Views\Boeken\GetBoekenLijst.cshtml" />
     <Content Include="Views\Boeken\MijnBoeken.cshtml" />
     <Content Include="Views\Boeken\ZoekBoek.cshtml" />
+    <Content Include="Views\Gebruikers\GetBoekenGebruiker.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
