--- a/KillerApp SE/KillerApp SE.csproj
+++ b/KillerApp SE/KillerApp SE.csproj
@@ -142,10 +142,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\GebruikersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\InlogController.cs" />
     <Compile Include="Controllers\BoekenController.cs" />
     <Compile Include="DAL\Repository\BoekRepository.cs" />
     <Compile Include="DAL\Repository\GebruikerRepository.cs" />
+    <Compile Include="DAL\SQL\BoekPersistency.cs" />
+    <Compile Include="DAL\SQL\GebruikerPersistency.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -156,7 +157,6 @@
     <Compile Include="Models\Persoon.cs" />
     <Compile Include="Models\Uitgever.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DAL\SQL\SQLPersistency.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -171,15 +171,13 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Inlog\Login.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Gebruikers\GebruikerToevoegen.cshtml" />
-    <Content Include="Views\Gebruikers\WijzigMijnGegevens.cshtml" />
     <Content Include="Views\Gebruikers\GebruikerBeheren.cshtml" />
     <Content Include="Views\Gebruikers\WijzigGegevens.cshtml" />
     <Content Include="Views\Boeken\GetBoekenLijst.cshtml" />
     <Content Include="Views\Boeken\MijnBoeken.cshtml" />
     <Content Include="Views\Boeken\ZoekBoek.cshtml" />
-    <Content Include="Views\Gebruikers\GetBoekenGebruiker.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
